# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  test.py
.github/workflows/: test-check.yml
gendiff/: __init__.py  cli.py  generate_diff.py  get_diff.py  load_files.py
gendiff/formatters/: plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: result_json.txt  result_plain.txt
